# rc

./: Cargo.toml  README.md  cbuild.sh  clean.sh  gobuild.sh
c-example/: a.c  cbin  rc.h
go-example/: gobin  main.go
src/: lib.rs
