[package]
name = "rc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
# libc = "0.2"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.24.3"
